# search-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  constants.rs  dependencies.rs  error.rs  lib.rs  logging.rs  main.rs  preview.rs  validation.rs
src/search/: engines.rs  mod.rs  sorter.rs
src/tui/: app.rs  events.rs  highlighter.rs  mod.rs  ui.rs
