[package]
name = "search-rs"
version = "0.1.0"
edition = "2021"
description = "Interactive search tool with TUI interface for code search using rip-grep"
license = "MIT"
repository = "https://github.com/raakeshkamal/search-rs"
readme = "README.md"

[[bin]]
name = "search-rs"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.29"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Fast syntax highlighting
syntect = "5.0"

# Additional dependencies
regex = "1.9"
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

# Git Integration
git2 = "0.17"

# Testing dependencies
tempfile = "3.8"